# raids_of_umm

./: .gitignore  ART_DIRECTION.md  CMakeLists.txt  Factions.md  ROADMAP.md  economy.md  run.sh
arena/: arena.py  sc_defs.py
assets/: pixellab  render_offsets.json
assets/shaders/: hex.frag  hex.vert  model.frag  model.vert  outline.vert  sprite.frag  sprite.vert  ui.frag  ui.vert
data/: artifacts.json  buildings.json  items.json  spells.json  units.json
data/maps/: New Map 1.json  cradle_of_umm.json  default.json  editor.json  the_pale_divide.json  tutorial.json
docs/: OBJECT_STRUCTURE.txt  OVERVIEW.md  ROADMAP.md  TESTS.md  combat.md  combat.txt  devtool-alignment-plan.md  graphics-architecture.md
scripts/: fix_hex_fill.py  generate_castle.py  generate_castle_interior.py  generate_cradle_of_umm.py  generate_pale_divide.py  hex_tile_cutter.py  make_grass_edge2.py  pixellab_client.py  remove_bg.py
src/: main.cpp
src/adventure/: AdventureState.cpp  AdventureState.h
src/castle/: CastleState.cpp  CastleState.h  RecruitResult.h
src/combat/: CombatAI.cpp  CombatAI.h  CombatArmy.h  CombatEngine.cpp  CombatEngine.h  CombatEvent.h  CombatMap.h  CombatRenderer.cpp  CombatRenderer.h  CombatState.cpp  CombatState.h  CombatUnit.h
src/core/: Application.cpp  Application.h  EventBus.h  ResourceManager.cpp  ResourceManager.h  StateMachine.cpp  StateMachine.h  TurnManager.cpp  TurnManager.h
src/dungeon/: DungeonOutcome.h  DungeonState.cpp  DungeonState.h
src/entities/: SCDef.h  SpecialCharacter.h  UnitType.h
src/equipment/: EquipmentState.cpp  EquipmentState.h
src/hero/: Hero.cpp  Hero.h
src/hex/: HexCoord.h  HexGrid.cpp  HexGrid.h
src/menu/: MainMenuState.cpp  MainMenuState.h
src/party/: PartyState.cpp  PartyState.h
src/render/: AnimatedSprite.cpp  AnimatedSprite.h  Camera2D.cpp  Camera2D.h  HUDRenderer.cpp  HUDRenderer.h  HexRenderer.cpp  HexRenderer.h  MiniMap.cpp  MiniMap.h  RenderOffsets.cpp  RenderOffsets.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  TileVisuals.h
src/tilebuilder/: TileBuilderState.cpp  TileBuilderState.h
src/ui/: EditorPalette.cpp  EditorPalette.h
src/world/: EncounterDef.h  Faction.h  MapObject.h  MapTile.h  ObjectControl.h  Resources.h  SCDef.h  SpecialCharacter.h  SpellDef.h  TownState.h  UnitType.h  WondrousItem.h  WorldMap.cpp  WorldMap.h
src/worldbuilder/: EditorTool.h  WorldBuilderState.cpp  WorldBuilderState.h
tests/: main.cpp  test_camera.cpp  test_combat.cpp  test_hex.cpp  test_resourcemanager.cpp  test_resources.cpp  test_runner.h  test_session.cpp  test_worldbuilder.cpp  test_worldmap.cpp
